# python-js

./: .gitignore  API_LEDGER.md  README.md  pyproject.toml
docs/: js-parity.md
src/tsonic_python_js/: __init__.py  arrays.py  collections.py  dates.py  dynamic.py  equality.py  errors.py  json.py  numbers.py  objects.py  regexp.py  strings.py  typed_arrays.py  values.py
tests/: assertions.py  test_architecture.py  test_arrays.py  test_completion.py  test_dates.py  test_equality.py  test_errors.py  test_numbers.py  test_objects.py  test_regexp.py  test_regexp_oracle.py  test_strings.py  test_typed_arrays.py  test_values.py
tests/oracle/: regexp-vectors.json
tools/: generate-regexp-oracle.mjs
