[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tsonic-python-js"
version = "0.1.0"
description = "Closed JavaScript compatibility runtime helpers for generated Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "tsoniclang" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsonic_python_js"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
